// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe mostrar items cuando cargan imganes de useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__fadeOut animate__delay-2s"
  >
    Vegeta
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe mostrarse ok 1`] = `
<Fragment>
  <h3
    className="animate__fadeOut animate__delay-2s"
  >
    Vegeta
  </h3>
  <p
    className="animate_animated animate_flash animate__delay-5s"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
